--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shallowly",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Shallowly: Modern shallow renderer for React 18+. Enzyme-compatible API, 2x faster, with TypeScript support.",
   "main": "dist/index.js",
   "module": "dist/esm/index.js",
@@ -48,27 +48,29 @@
     "react-dom": "^16.0.0 || ^17.0.0 || ^18.0.0 || ^19.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.27.0",
-    "@babel/core": "^7.26.10",
-    "@babel/preset-env": "^7.26.9",
-    "@babel/preset-react": "^7.26.3",
-    "@babel/preset-typescript": "^7.27.0",
-    "@types/react": "^19.0.12",
-    "cpy-cli": "^5.0.0",
-    "cross-env": "^7.0.3",
+    "@babel/cli": "7.27.0",
+    "@babel/core": "7.26.10",
+    "@babel/preset-env": "7.26.9",
+    "@babel/preset-react": "7.26.3",
+    "@babel/preset-typescript": "7.27.0",
+    "@types/react": "19.0.12",
+    "cpy-cli": "5.0.0",
+    "cross-env": "7.0.3",
     "eslint": "9.23.0",
-    "npm-run-all": "^4.1.5",
+    "npm-run-all": "4.1.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "rimraf": "^6.0.1",
-    "typescript": "^5.8.2"
+    "rimraf": "6.0.1",
+    "typescript": "5.8.2"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/your-username/shallowly.git"
+    "url": "https://github.com/your-username/shallowly.git",
+    "directory": "docs"
   },
   "bugs": {
     "url": "https://github.com/your-username/shallowly/issues"
   },
-  "homepage": "https://github.com/your-username/shallowly#readme"
+  "homepage": "https://github.com/your-username/shallowly#readme",
+  "docs": "https://github.com/bad4iz/shallowly/blob/main/docs/index.md"
 }
