--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "shallowly",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "description": "Shallowly: Modern shallow renderer for React 18+. Enzyme-compatible API, 2x faster, with TypeScript support.",
-  "main": "./src/index.js",
-  "module": "./src/index.js",
-  "typings": "./src/index.d.ts",
+  "main": "./dist/main.js",
+  "module": "./dist/main.mjs",
+  "typings": "./dist/main.d.ts",
   "files": [
     "dist"
   ],
@@ -50,6 +50,8 @@
     "react-dom": "^16.0.0 || ^17.0.0 || ^18.0.0 || ^19.0.0"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.2.8",
+    "@eslint/js": "^9.25.1",
     "@rollup/plugin-typescript": "12.1.2",
     "@testing-library/jest-dom": "^6.6.3",
     "@types/node": "22.14.0",
@@ -61,15 +63,22 @@
     "@vitest/coverage-v8": "^3.1.1",
     "@vitest/ui": "^3.1.1",
     "eslint": "9.24.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-bad4iz": "bad4iz/eslint-plugin-bad4iz",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsdoc": "^50.6.9",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-sort-keys-fix": "^1.1.2",
+    "eslint-plugin-vitest": "^0.5.4",
     "globals": "^16.0.0",
     "jsdom": "^26.0.0",
     "prettier": "3.5.3",
     "rollup-plugin-typescript-paths": "1.5.0",
     "tslib": "2.8.1",
     "typescript": "5.8.3",
+    "typescript-eslint": "^8.31.0",
     "vite": "6.2.6",
     "vitest": "3.1.1"
   },
