--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "@types/node": "24.0.3",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "@typescript-eslint/eslint-plugin": "8.34.1",
     "@typescript-eslint/parser": "8.34.1",
     "@vitejs/plugin-react": "4.5.2",
@@ -82,6 +84,9 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/bad4iz/shallowly.git"
+  },
+  "peerDependencies": {
+    "react": ">=18"
   },
   "bugs": {
     "url": "https://github.com/bad4iz/shallowly/issues"
