--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shallowly",
-  "version": "1.0.12",
+  "version": "1.0.14",
   "description": "Shallowly: Modern shallow renderer for React 18+. Enzyme-compatible API, 2x faster, with TypeScript support.",
   "main": "./dist/main.js",
   "module": "./dist/main.mjs",
@@ -18,7 +18,7 @@
     "pub": "npm publish",
     "test": "vitest",
     "test:ui": "vitest --ui --changed",
-    "lint": "eslint src tests --ext .js,.jsx,.ts,.tsx --fix"
+    "lint": "eslint src tests --fix"
   },
   "keywords": [
     "react",
@@ -47,46 +47,46 @@
   "author": "@bad4iz",
   "license": "MIT",
   "devDependencies": {
-    "@eslint/compat": "1.3.0",
-    "@eslint/js": "9.29.0",
-    "@rollup/plugin-typescript": "12.1.3",
-    "@testing-library/jest-dom": "6.6.3",
-    "@types/node": "24.0.3",
-    "@types/react": "19.1.8",
-    "@types/react-dom": "19.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "@typescript-eslint/eslint-plugin": "8.34.1",
-    "@typescript-eslint/parser": "8.34.1",
-    "@vitejs/plugin-react": "4.5.2",
-    "@vitest/coverage-v8": "3.2.4",
-    "@vitest/ui": "3.2.4",
-    "eslint": "9.29.0",
+    "@eslint/compat": "2.0.2",
+    "@eslint/js": "8.57.1",
+    "@rollup/plugin-typescript": "12.3.0",
+    "@testing-library/jest-dom": "6.9.1",
+    "@types/node": "25.2.3",
+    "@types/react": "19.2.13",
+    "@types/react-dom": "19.2.3",
+    "react": "19.2.4",
+    "react-dom": "19.2.4",
+    "@typescript-eslint/eslint-plugin": "8.55.0",
+    "@typescript-eslint/parser": "8.55.0",
+    "@vitejs/plugin-react": "5.1.4",
+    "@vitest/coverage-v8": "4.0.18",
+    "@vitest/ui": "4.0.18",
+    "eslint": "8.57.1",
     "eslint-config-react-app": "7.0.1",
     "eslint-plugin-bad4iz": "file:./eslint-plugin-bad4iz",
-    "eslint-plugin-import": "2.31.0",
-    "eslint-plugin-jsdoc": "51.0.3",
+    "eslint-plugin-import": "2.32.0",
+    "eslint-plugin-jsdoc": "62.5.4",
     "eslint-plugin-react": "7.37.5",
-    "eslint-plugin-react-hooks": "5.2.0",
+    "eslint-plugin-react-hooks": "7.0.1",
     "eslint-plugin-simple-import-sort": "12.1.1",
     "eslint-plugin-sort-keys-fix": "1.1.2",
     "eslint-plugin-vitest": "0.5.4",
-    "globals": "16.2.0",
-    "jsdom": "26.1.0",
-    "prettier": "3.5.3",
+    "globals": "17.3.0",
+    "jsdom": "28.0.0",
+    "prettier": "3.8.1",
     "rollup-plugin-typescript-paths": "1.5.0",
     "tslib": "2.8.1",
-    "typescript": "5.8.3",
-    "typescript-eslint": "8.34.1",
-    "vite": "6.3.5",
-    "vitest": "3.2.4"
+    "typescript": "5.9.3",
+    "typescript-eslint": "8.55.0",
+    "vite": "7.3.1",
+    "vitest": "4.0.18"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/bad4iz/shallowly.git"
   },
   "peerDependencies": {
-    "react": ">=18"
+    "react": "^18.0.0 || ^19.0.0"
   },
   "bugs": {
     "url": "https://github.com/bad4iz/shallowly/issues"
