--- a/package.json
+++ b/package.json
@@ -48,21 +48,18 @@
   "license": "MIT",
   "devDependencies": {
     "@eslint/compat": "2.0.2",
-    "@eslint/js": "8.57.1",
+    "@eslint/js": "9.39.1",
     "@rollup/plugin-typescript": "12.3.0",
     "@testing-library/jest-dom": "6.9.1",
     "@types/node": "25.2.3",
     "@types/react": "19.2.13",
     "@types/react-dom": "19.2.3",
-    "react": "19.2.4",
-    "react-dom": "19.2.4",
     "@typescript-eslint/eslint-plugin": "8.55.0",
     "@typescript-eslint/parser": "8.55.0",
     "@vitejs/plugin-react": "5.1.4",
     "@vitest/coverage-v8": "4.0.18",
     "@vitest/ui": "4.0.18",
-    "eslint": "8.57.1",
-    "eslint-config-react-app": "7.0.1",
+    "eslint": "9.39.1",
     "eslint-plugin-bad4iz": "file:./eslint-plugin-bad4iz",
     "eslint-plugin-import": "2.32.0",
     "eslint-plugin-jsdoc": "62.5.4",
@@ -70,10 +67,11 @@
     "eslint-plugin-react-hooks": "7.0.1",
     "eslint-plugin-simple-import-sort": "12.1.1",
     "eslint-plugin-sort-keys-fix": "1.1.2",
-    "eslint-plugin-vitest": "0.5.4",
     "globals": "17.3.0",
     "jsdom": "28.0.0",
     "prettier": "3.8.1",
+    "react": "19.2.4",
+    "react-dom": "19.2.4",
     "rollup-plugin-typescript-paths": "1.5.0",
     "tslib": "2.8.1",
     "typescript": "5.9.3",
@@ -86,7 +84,7 @@
     "url": "https://github.com/bad4iz/shallowly.git"
   },
   "peerDependencies": {
-    "react": "^18.0.0 || ^19.0.0"
+    "react": "^19.0.0"
   },
   "bugs": {
     "url": "https://github.com/bad4iz/shallowly/issues"
